--- a/Forecasting/us_volumes_newEnvelopes.ipynb
+++ b/Forecasting/us_volumes_newEnvelopes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "447eae9c",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "\n",
-    "import warnings # necessary b/c pandas & statsmodels datetime issue\n",
+    "import warnings\n",
     "warnings.simplefilter(action=\"ignore\")"
    ]
   },
